# plot-wasm

./: .gitignore  DO.org  Makefile  README.md  TODO.org  meson.build
.ccls-cache/@@home@nim@dev@c@plot-wasm/: @usr@include@SDL2@SDL.h.blob  @usr@include@SDL2@SDL_assert.h.blob  @usr@include@SDL2@SDL_atomic.h.blob  @usr@include@SDL2@SDL_audio.h.blob  @usr@include@SDL2@SDL_blendmode.h.blob  @usr@include@SDL2@SDL_clipboard.h.blob  @usr@include@SDL2@SDL_config.h.blob  @usr@include@SDL2@SDL_cpuinfo.h.blob  @usr@include@SDL2@SDL_endian.h.blob  @usr@include@SDL2@SDL_error.h.blob  @usr@include@SDL2@SDL_events.h.blob  @usr@include@SDL2@SDL_filesystem.h.blob  @usr@include@SDL2@SDL_gamecontroller.h.blob  @usr@include@SDL2@SDL_gesture.h.blob  @usr@include@SDL2@SDL_haptic.h.blob  @usr@include@SDL2@SDL_hints.h.blob  @usr@include@SDL2@SDL_image.h.blob  @usr@include@SDL2@SDL_joystick.h.blob  @usr@include@SDL2@SDL_keyboard.h.blob  @usr@include@SDL2@SDL_keycode.h.blob  @usr@include@SDL2@SDL_loadso.h.blob  @usr@include@SDL2@SDL_locale.h.blob  @usr@include@SDL2@SDL_log.h.blob  @usr@include@SDL2@SDL_main.h.blob  @usr@include@SDL2@SDL_messagebox.h.blob  @usr@include@SDL2@SDL_metal.h.blob  @usr@include@SDL2@SDL_misc.h.blob  @usr@include@SDL2@SDL_mouse.h.blob  @usr@include@SDL2@SDL_mutex.h.blob  @usr@include@SDL2@SDL_pixels.h.blob  @usr@include@SDL2@SDL_platform.h.blob  @usr@include@SDL2@SDL_power.h.blob  @usr@include@SDL2@SDL_quit.h.blob  @usr@include@SDL2@SDL_rect.h.blob  @usr@include@SDL2@SDL_render.h.blob  @usr@include@SDL2@SDL_rwops.h.blob  @usr@include@SDL2@SDL_scancode.h.blob  @usr@include@SDL2@SDL_sensor.h.blob  @usr@include@SDL2@SDL_shape.h.blob  @usr@include@SDL2@SDL_stdinc.h.blob  (+337 more)
.ccls-cache/@@usr@home@nim@dev@c@plot-wasm/: @usr@include@_ctype.h.blob  @usr@include@assert.h.blob  @usr@include@c++@v1@__algorithm@adjacent_find.h.blob  @usr@include@c++@v1@__algorithm@all_of.h.blob  @usr@include@c++@v1@__algorithm@any_of.h.blob  @usr@include@c++@v1@__algorithm@binary_search.h.blob  @usr@include@c++@v1@__algorithm@clamp.h.blob  @usr@include@c++@v1@__algorithm@comp.h.blob  @usr@include@c++@v1@__algorithm@comp_ref_type.h.blob  @usr@include@c++@v1@__algorithm@copy.h.blob  @usr@include@c++@v1@__algorithm@copy_backward.h.blob  @usr@include@c++@v1@__algorithm@copy_if.h.blob  @usr@include@c++@v1@__algorithm@copy_n.h.blob  @usr@include@c++@v1@__algorithm@count.h.blob  @usr@include@c++@v1@__algorithm@count_if.h.blob  @usr@include@c++@v1@__algorithm@equal.h.blob  @usr@include@c++@v1@__algorithm@equal_range.h.blob  @usr@include@c++@v1@__algorithm@fill.h.blob  @usr@include@c++@v1@__algorithm@fill_n.h.blob  @usr@include@c++@v1@__algorithm@find.h.blob  (+447 more)
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
img/: react.js
module-shared/: parse.c  parse.h
src/: channel.c  channel.h  channel_relay.c  channel_relay.h  channel_service.c  channel_service.h  channels.c  channels.h  chart_points.c  chart_points.h  coinf.c  coinf.h  colorscheme.h  comfun.h  common_function.h  common_functions.h  coord_info.c  coord_info.h  coordsinfo.c  datagraph.c  datagraph.h  draw.c  draw.h  global.c  global.h  global_vars.c  global_vars.h  globalplotvar.c  globalplotvar.h  graphics.c  graphics.h  info_win.c  info_win.h  js_api.c  js_api.h  lang.c  lang.h  linked_list.c  main.c  meson.build  (+21 more)
temp-old/: coordsinfo.h  datagraph.h  globalplotvar.c  globalplotvar.h  plot.c  plot.h
(+789 files in other folders)
